# min_hook_rs

./: .gitignore  Cargo.toml  README.md
examples/: basic_hook.rs  genshin_bili_injector.rs  launch.bat
examples/genshin/: genshin_bili_dll.rs  genshin_bili_injector.rs  genshin_fps_unlocker.rs  launch.bat  login.json  process_info.rs
examples/genshin/bilibili/: genshin_bili_dll.rs  genshin_bili_injector.rs
examples/genshin/fps_unlocker/: fps_unlocker_dll.rs  fps_unlocker_inj.rs  fps_unlocker_win.rs  fps_unlocker_win_hp.rs  fps_unlocker_wine.rs
examples/genshin/hutao/: compile.txt  hutao_config.rs  hutao_injector.cpp  hutao_injector.rs  hutao_launcher.rs  hutao_minhook.cpp
examples/genshin/hutao/cpp/: hutao_dll.def  hutao_injector.cpp  hutao_minhook.cpp  reverse.cpp
examples/genshin/hutao/cpp(stub)/: compile.txt  hutao_injector.cpp  hutao_launcher.cpp  hutao_minhook.lib
examples/genshin/hutao/cpp_/: hutao_dll.def  hutao_injector.cpp  hutao_minhook.lib
examples/genshin/hutao/rust/: build.txt  hutao_injector.rs  hutao_minhook.rs  hutao_seh.rs  hutao_seh_stub.c  hutao_seh_stub.lib
examples/messagebox/: messagebox_test.rs  simple_injector.rs  simple_messagebox_hook.rs
examples/notepad/: notepad_hook_dll.rs  notepad_injector.rs
src/: buffer.rs  disasm.rs  disasm_bak.rs  error.rs  hook.rs  instruction.rs  lib.rs  trampoline.rs
