[package]
name = "min_hook_rs"
version = "1.2.0"
edition = "2024"
license = "MIT"
authors = ["Rukkhadevata123 <3083913301@qq.com>"]
description = "A Rust implementation of MinHook library for Windows x64 function hooking with enhanced precision instruction decoding"
documentation = "https://docs.rs/min_hook_rs"
homepage = "https://github.com/Rukkhadevata123/min_hook_rs"
repository = "https://github.com/Rukkhadevata123/min_hook_rs"
readme = "README.md"
keywords = ["hook", "windows", "x64", "function", "detour"]
categories = ["os::windows-apis", "development-tools", "api-bindings"]
exclude = [
    "examples/",
    "minhook/",
    ".github/",
    "*.exe",
    "*.dll",
    "target/",
    ".vscode/",
    "Cargo.lock",
    "gs_bilibili/",
    "fpsunlock/"
]


[dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Environment",
    "Win32_System_Memory", 
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Security"
]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

# Basic Hook Example
[[example]]
name = "basic_hook"
path = "examples/basic_hook.rs"

# MessageBox Examples
[[example]]
name = "simple_messagebox_hook"
path = "examples/messagebox/simple_messagebox_hook.rs"
crate-type = ["cdylib"]

[[example]]
name = "simple_injector"
path = "examples/messagebox/simple_injector.rs"

[[example]]
name = "messagebox_test"
path = "examples/messagebox/messagebox_test.rs"

# Notepad Examples
[[example]]
name = "notepad_hook_dll"
path = "examples/notepad/notepad_hook_dll.rs"
crate-type = ["cdylib"]

[[example]]
name = "notepad_injector"
path = "examples/notepad/notepad_injector.rs"

# Genshin Examples
[[example]]
name = "genshin_bili_dll"
path = "examples/genshin/genshin_bili_dll.rs"
crate-type = ["cdylib"]

[[example]]
name = "genshin_bili_injector"
path = "examples/genshin/genshin_bili_injector.rs"

[[example]]
name = "genshin_fps_unlocker"
path = "examples/genshin/genshin_fps_unlocker.rs"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"

# Library configuration
[lib]
name = "min_hook_rs"
crate-type = ["rlib"]
