[package]
name = "min_hook_rs"
version = "2.0.1"
edition = "2024"
license = "MIT"
authors = ["Rukkhadevata123 <3083913301@qq.com>"]
description = "A Rust implementation of MinHook library for Windows x64 function hooking with enhanced precision instruction decoding"
documentation = "https://docs.rs/min_hook_rs"
homepage = "https://github.com/Rukkhadevata123/min_hook_rs"
repository = "https://github.com/Rukkhadevata123/min_hook_rs"
readme = "README.md"
keywords = ["hook", "windows", "x64", "function", "detour"]
categories = ["os::windows-apis", "development-tools", "api-bindings"]
exclude = [
    "examples/",
    "minhook/",
    ".github/",
    "*.exe",
    "*.dll",
    "target/",
    ".vscode/",
    "Cargo.lock",
    "gs_bilibili/",
    "fpsunlock/",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
]

[dependencies.serde_json]
version = "1.0"

# Basic Hook Example
[[example]]
name = "basic_hook"
path = "examples/basic_hook.rs"

# MessageBox Examples
[[example]]
name = "simple_messagebox_hook"
path = "examples/messagebox/simple_messagebox_hook.rs"
crate-type = ["cdylib"]

[[example]]
name = "simple_injector"
path = "examples/messagebox/simple_injector.rs"

[[example]]
name = "messagebox_test"
path = "examples/messagebox/messagebox_test.rs"

# Notepad Examples
[[example]]
name = "notepad_hook_dll"
path = "examples/notepad/notepad_hook_dll.rs"
crate-type = ["cdylib"]

[[example]]
name = "notepad_injector"
path = "examples/notepad/notepad_injector.rs"

# Genshin Examples

[[example]]
name = "hutao_minhook"
path = "examples/genshin/hutao/rust/hutao_minhook.rs"
crate-type = ["cdylib"]

[[example]]
name = "hutao_injector"
path = "examples/genshin/hutao/rust/hutao_injector.rs"

[[example]]
name = "genshin_bili_dll"
path = "examples/genshin/bilibili/genshin_bili_dll.rs"
crate-type = ["cdylib"]

[[example]]
name = "genshin_bili_injector"
path = "examples/genshin/bilibili/genshin_bili_injector.rs"

[[example]]
name = "fps_unlocker_wine"
path = "examples/genshin/fps_unlocker/fps_unlocker_wine.rs"

[[example]]
name = "fps_unlocker_win"
path = "examples/genshin/fps_unlocker/fps_unlocker_win.rs"

[[example]]
name = "fps_unlocker_win_hp"
path = "examples/genshin/fps_unlocker/fps_unlocker_win_hp.rs"

[[example]]
name = "fps_unlocker_inj"
path = "examples/genshin/fps_unlocker/fps_unlocker_inj.rs"

[[example]]
name = "fps_unlocker_dll"
path = "examples/genshin/fps_unlocker/fps_unlocker_dll.rs"
crate-type = ["cdylib"]

[[example]]
name = "process_info"
path = "examples/genshin/process_info.rs"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"

# Library configuration
[lib]
name = "min_hook_rs"
crate-type = ["rlib"]
